feat: add Chatbot using RAG and Chainlit

--- a/[AIO24]_Project_PDF_Q&A_using_RAG.ipynb
+++ b/[AIO24]_Project_PDF_Q&A_using_RAG.ipynb
@@ -10638,7 +10638,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hiimjupter/RAG_PDF_Q-A/blob/develop/%5BAIO24%5D_Project_PDF_Q%26A_using_RAG.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/hiimjupter/Chatbot_RAG_Chainlit/blob/develop/%5BAIO24%5D_Project_PDF_Q%26A_using_RAG.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -11903,7 +11903,7 @@
       "source": [
         "!pip install pyngrok -q\n",
         "from pyngrok import ngrok\n",
-        "!ngrok config add-authtoken 2ij24gSK4cy7NNnnfCOaeyiSrXN_2W8JFEbiQFctUg453KF88\n",
+        "!ngrok config add-authtoken <YOUR-AUTHTOKEN> #Create ngrok account -> go to YOUR-AUTHTOKEN section -> copy the AUTHTOKEN then paste to replace \"<YOUR-AUTHTOKEN>\"\n",
         "public_url = ngrok.connect(8000).public_url\n",
         "print(public_url)"
       ],
